Fix screen overflow issue with border-radius

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -402,6 +402,7 @@ html {
   background-image: linear-gradient(45deg, #ecf0f1 25%, transparent 25%, transparent 75%, #ecf0f1 75%), linear-gradient(45deg, #ecf0f1 25%, transparent 25%, transparent 75%, #ecf0f1 75%);
   background-position: 0 0, 0.5em 0.5em;
   background-size: 1em 1em;
+  border-radius: 0.25em;
   border: 1px solid #bdc3c7;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -410,6 +411,8 @@ html {
       -ms-flex: auto;
           flex: auto;
   margin-top: 1.25em;
+  overflow: hidden;
+  position: relative;
 }
 
 .main__wrap--stretch .screen__viewport {
